--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "webpack serve",
     "build": "webpack"
   },
   "keywords": [],
@@ -15,10 +15,11 @@
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "glob": "^7.2.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "marked": "^12.0.2"
+    "marked": "^4.0.12"
   }
 }
