--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
+    "glob": "^7.2.0",
     "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.91.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "glob": "^7.2.0"
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "marked": "^4.0.12"
+    "marked": "^4.3.0"
   }
 }
