--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "blogis",
-  "version": "1.0.0",
-  "description": "",
+  "name": "npw-lt",
+  "version": "2.0.0",
+  "description": "Naglis Šuliokas blog/portfolio website",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
     "build": "webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "naglissul",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "glob": "^7.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
