--- a/package.json
+++ b/package.json
@@ -1,29 +1,47 @@
 {
-  "name": "npw-lt",
-  "version": "2.0.0",
-  "description": "Naglis Šuliokas blog/portfolio website",
-  "main": "index.js",
+  "name": "npw",
+  "version": "3.0.0",
+  "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
-  },
-  "keywords": [],
-  "author": "naglissul",
-  "license": "ISC",
-  "devDependencies": {
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "glob": "^7.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "docusaurus": "docusaurus",
+    "start": "BROWSER=none docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "marked": "^4.3.0"
+    "@docusaurus/core": "3.5.2",
+    "@docusaurus/preset-classic": "3.5.2",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
+    "prism-react-renderer": "^2.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@docusaurus/module-type-aliases": "3.5.2",
+    "@docusaurus/tsconfig": "3.5.2",
+    "@docusaurus/types": "3.5.2",
+    "typescript": "~5.5.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
