Fix acorn problem in latex

--- a/.docusaurus/docusaurus-plugin-content-blog/default/site-blog-2024-06-20-season-3rd-year-md-63e.json
+++ b/.docusaurus/docusaurus-plugin-content-blog/default/site-blog-2024-06-20-season-3rd-year-md-63e.json
@@ -28,6 +28,10 @@
     ]
   },
   "unlisted": false,
+  "prevItem": {
+    "title": "Pennylane demos overview",
+    "permalink": "/blog/2024/11/13/qml"
+  },
   "nextItem": {
     "title": "Ideas left behind",
     "permalink": "/blog/2024/05/08/ideas-left-behind"
